@@ -25,10 +25,13 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.sql.SQLException;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 
@@ -83,13 +86,15 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 	private boolean isNewStation = false, isNewLevelingLine = false;
 	private Set<String> reservedNames = null;
 	private Map<String, PointRow> pointMap = new HashMap<String, PointRow>();
-	private String startPointName = null, endPointName = null, lastStartPointName = null, lastLevelingLineName = null;
+	private String startPointName = null, endPointName = null, lastStartPointName = null, lastLevelingLineName = null, lastPointNameForeSightReading = null;
 	private LevelingData levelingData = null;
 	
 	private double ih = 0.0, th = 0.0;
 	private Double rb1 = null, vb1 = null, distRb1 = null, distVb1 = null;
 	private Double rb2 = null, vb2 = null, distRb2 = null, distVb2 = null;
 	private Double zb = null, distZb = null, lastRb4Zb = null, distLastRb4Zb;
+	
+	private long cnt = 0;
 
 	private List<PointRow> points1d = null;
 	private List<PointRow> points2d = null;
@@ -180,6 +185,8 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 
 		this.slopeDistances.clear();
 		this.zenithAngles.clear();
+		
+		this.cnt = 0;
 	}
 
 	@Override
@@ -360,6 +367,7 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 		// Speichere die (neue) Standpunktnummer und speichere den bisherigen Richtungssatz des alten Standpunkes
 		if (this.isNewStation && pointName != null && !pointName.isBlank()) {
 			this.startPointName = pointName;
+			this.endPointName   = null;
 			this.ih = ih==null ? 0.0 : ih;
 			this.th = th==null ? 0.0 : th;
 
@@ -372,52 +380,13 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 			this.saveObservationGroups(false);
 			this.lastStartPointName = null;
 		}
-		else if (pointName != null && !pointName.trim().isEmpty()) {
+		else if (pointName != null && !pointName.isBlank()) {
 			this.endPointName = pointName;
 		}
 		else if (this.isNewLevelingLine) {
 			this.saveObservationGroups(this.dim == DimensionType.HEIGHT);
 			this.lastLevelingLineName = null;
-		}
-
-		// Speichere Punkte aus der GSI
-		if (pointName != null && !pointName.trim().isEmpty() && !this.reservedNames.contains(pointName) && !this.pointMap.containsKey(pointName)) {
-			PointRow point = new PointRow();
-			point.setName(pointName);
-			point.setCode(pointCode);
-			point.setXApriori(x);
-			point.setYApriori(y);
-			point.setZApriori(z);
-
-			if ((this.dim == DimensionType.SPATIAL || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null && z != null) {
-				this.pointMap.put(pointName, point);
-				this.points3d.add(point);
-			}
-			else if ((this.dim == DimensionType.PLAN || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null) {
-				this.pointMap.put(pointName, point);
-				this.points2d.add(point);
-			}
-			else if ((this.dim == DimensionType.HEIGHT || this.dim == DimensionType.PLAN_AND_HEIGHT) && z != null) {
-				this.pointMap.put(pointName, point);
-				this.points1d.add(point);
-			}
-		}
-		else if (this.pointMap.containsKey(pointName)) {
-			PointRow point = this.pointMap.get(pointName);
-			if (this.hasZerosCoordinates(point)) {
-				if ((this.dim == DimensionType.SPATIAL || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null && z != null) {
-					point.setXApriori(x);
-					point.setYApriori(y);
-					point.setZApriori(z);
-				}
-				else if ((this.dim == DimensionType.PLAN || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null) {
-					point.setXApriori(x);
-					point.setYApriori(y);
-				}
-				else if ((this.dim == DimensionType.HEIGHT || this.dim == DimensionType.PLAN_AND_HEIGHT) && z != null) {
-					point.setZApriori(z);
-				}
-			}
+			this.lastPointNameForeSightReading = null;
 		}
 
 		// Speichere Beobachtungen in den Gruppen
@@ -455,7 +424,21 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 			}
 
 			// Fuege Beobachtungen hinzu
-			if (this.startPointName != null && this.endPointName != null) {
+			if (this.startPointName != null && this.endPointName != null) {					
+
+				/** auto. WP - Nivellement **/
+				if (this.dim == DimensionType.HEIGHT) {
+					// Wurden WP mit dem Namen "0" in der GSI gekennzeichnet, wird ein individueller Name generiert
+					if (this.startPointName.equals("0") && ((this.rb1 != null && this.vb1 != null) || (this.lastRb4Zb != null && this.zb != null)) && this.lastPointNameForeSightReading != null && !this.lastPointNameForeSightReading.isBlank()) 
+						this.startPointName = this.lastPointNameForeSightReading;
+
+					if (this.endPointName.equals("0") && this.rb1 != null && this.vb1 != null)
+						this.endPointName = this.lastPointNameForeSightReading = generatePointId(++cnt);
+					
+					if (pointName != null && pointName.equals("0") && this.lastPointNameForeSightReading != null && !this.lastPointNameForeSightReading.isBlank())
+						pointName = this.lastPointNameForeSightReading;
+				}
+				
 				if (this.lastStartPointName == null)
 					this.lastStartPointName = this.startPointName;
 				
@@ -485,8 +468,7 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 					this.levelingData = null;
 					
 					// erzeuge neuen Datensatz
-					if (this.levelingData == null)
-						this.levelingData = new LevelingData();
+					this.levelingData = new LevelingData();
 
 					this.levelingData.addBackSightReading(this.startPointName, this.rb1, this.distRb1 != null ? this.distRb1 : 0, true);
 					this.levelingData.addForeSightReading(this.endPointName,   this.vb1, this.distVb1 != null ? this.distVb1 : 0, true);
@@ -497,6 +479,12 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 				
 				// ermittle Hoehenunterschied aus R2 und V2
 				if (this.levelingData != null && this.rb2 != null && this.vb2 != null) {
+					// Bei auotmatischer Nummerierung der WPs erfolgt keine Pruefung der Punktnamen fuer R2 und V2
+					if (this.startPointName.equals("0"))
+						this.startPointName = this.levelingData.getStartPointName();
+					if (this.endPointName.equals("0"))
+						this.endPointName = this.levelingData.getEndPointName();
+					
 					this.levelingData.addBackSightReading(this.startPointName, this.rb2, this.distRb2 != null ? this.distRb2 : 0, false);
 					this.levelingData.addForeSightReading(this.endPointName,   this.vb2, this.distVb2 != null ? this.distVb2 : 0, false);
 		
@@ -576,7 +564,54 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 					this.zenithAngles.add(obs);
 				}
 			}			
-		}			
+		}
+		
+		// Speichere Punkte aus der GSI
+		if (pointName != null && !pointName.isBlank()) {
+//			// auto. WP Nivellement - passe ggf. Name des Punktes an
+//			if (this.dim == DimensionType.HEIGHT && pointName.equals("0") && this.lastPointNameForeSightReading != null && !this.lastPointNameForeSightReading.isBlank())
+//				pointName = this.lastPointNameForeSightReading;
+			
+			if (!this.reservedNames.contains(pointName) && !this.pointMap.containsKey(pointName)) {
+				PointRow point = new PointRow();
+				point.setName(pointName);
+				point.setCode(pointCode);
+				point.setXApriori(x);
+				point.setYApriori(y);
+				point.setZApriori(z);
+
+				if ((this.dim == DimensionType.SPATIAL || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null && z != null) {
+					this.pointMap.put(pointName, point);
+					this.points3d.add(point);
+				}
+				else if ((this.dim == DimensionType.PLAN || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null) {
+					this.pointMap.put(pointName, point);
+					this.points2d.add(point);
+				}
+				else if ((this.dim == DimensionType.HEIGHT || this.dim == DimensionType.PLAN_AND_HEIGHT) && z != null) {
+					this.pointMap.put(pointName, point);
+					this.points1d.add(point);
+				}
+			}
+			else if (this.pointMap.containsKey(pointName)) {
+				PointRow point = this.pointMap.get(pointName);
+				if (this.hasZerosCoordinates(point)) {
+					if ((this.dim == DimensionType.SPATIAL || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null && z != null) {
+						point.setXApriori(x);
+						point.setYApriori(y);
+						point.setZApriori(z);
+					}
+					else if ((this.dim == DimensionType.PLAN || this.dim == DimensionType.PLAN_AND_HEIGHT) && x != null && y != null) {
+						point.setXApriori(x);
+						point.setYApriori(y);
+					}
+					else if ((this.dim == DimensionType.HEIGHT || this.dim == DimensionType.PLAN_AND_HEIGHT) && z != null) {
+						point.setZApriori(z);
+					}
+				}
+			}
+		}
+		
 		this.isNewStation = false;
 		this.isNewLevelingLine = false;
 	}
@@ -678,7 +713,9 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 		// Speichere Daten bspw. Richtungen, da diese Satzweise zu halten sind
 		if ((this.dim == DimensionType.HEIGHT || this.dim == DimensionType.PLAN_AND_HEIGHT) && !this.leveling.isEmpty() && (forceSaving || ImportOption.getInstance().isGroupSeparation(ObservationType.LEVELING))) {
 			this.addLevelingData(this.levelingData);
+			this.lastPointNameForeSightReading = null;
 			this.levelingData = null;
+			this.cnt = 0;
 			this.lastTreeItem = this.saveObservationGroup(TreeItemType.LEVELING_LEAF, this.leveling);
 		}
 
@@ -785,5 +822,17 @@ public class GSIFileReader extends SourceFileReader<TreeItem<TreeItemValue>> {
 			obs.setValueApriori(deltaH);
 			this.leveling.add(obs);
 		}
+	}
+	
+	private static String generatePointId(long cnt) {
+		LocalDateTime localDateTime = LocalDateTime.now(ZoneId.of("UTC"));
+		long doy   = localDateTime.getDayOfYear();
+		long musec = localDateTime.getNano()/1000;
+		long sec   = localDateTime.getSecond();
+		long min   = localDateTime.getMinute();
+		long hour  = localDateTime.getHour();
+		long musod = (hour * 3600L + min * 60L + sec) * 1000000L + musec;
+		int salt   = (int)Math.abs(Math.random()*1000);
+		return String.format(Locale.ENGLISH, "%c%04d%03d%011d%03d", 'W', cnt, doy, musod, salt);
 	}
 }
